--- a/login.html
+++ b/login.html
@@ -3,7 +3,6 @@
     <title> My app </title>
     </head>
      <body> 
-        This is my app!
-        this is index.
+        Login form.
      </body> 
 </html> 
